<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/Ho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Enter"
        android:textColor="#fff"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_one"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/Ho"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="#121212"
        android:hint="@string/Current_balance"
        android:inputType="numberDecimal|textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#64dd17"
        android:textColorHint="#9e9e9e"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_two"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_one"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:background="#121212"
        android:hint="@string/Current_Investment"
        android:inputType="numberDecimal|textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#64dd17"
        android:textColorHint="#9e9e9e"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_three"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_two"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:background="#121212"
        android:hint="@string/Salary_this_month"
        android:inputType="numberDecimal|textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#64dd17"
        android:textColorHint="#9e9e9e"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_four"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_three"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:background="#121212"
        android:hint="@string/Fixed_deposits"
        android:inputType="numberDecimal|textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#64dd17"
        android:textColorHint="#9e9e9e"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_five"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_four"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:background="#121212"
        android:hint="@string/Emergency_funds"
        android:inputType="numberDecimal|textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#64dd17"
        android:textColorHint="#9e9e9e"
        android:textSize="13sp" />

    <Button
        android:id="@+id/bt_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_five"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D50000"
        android:text="@string/Done"
        android:textColor="#fff" />


</RelativeLayout>