<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">
    <!--    tools:openDrawer="start"-->

    <RelativeLayout
        android:id="@+id/part1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/left"
            android:focusable="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/Add_details"
            android:textColor="#dcd4fa" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/NestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/button">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>


        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start|top"
        android:layout_marginStart="-65dp"
        android:background="#000000"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <RelativeLayout
                android:id="@+id/card12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp">

                <RelativeLayout
                    android:id="@+id/intro"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/intro">

                    <TextView
                        android:id="@+id/AD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/AC"
                        android:textColor="#fff"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/intro">

                    <TextView
                        android:id="@+id/Alpha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Alpha_champion"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Alpha"
                        android:text="@string/Investment_Ready"
                        android:textColor="#76ff03"
                        android:textSize="12sp" />


                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card12"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:text="@string/Register"
                android:textColor="#fff" />


            <Button
                android:id="@+id/insetData"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/card12"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#6f00ff"
                android:clickable="true"
                android:drawableStart="@drawable/ic_insert_chart_black_24dp"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/Insert_data"
                android:textColor="#dcd4fa"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/right" />


        </RelativeLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>