<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/dollar" />

    <TextView
        android:id="@+id/finance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/Finance_Plan"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/manage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/finance"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/Manage"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="15sp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/manage"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#424242"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:text="@string/Current_balance"
                android:textColor="#EEEEEE"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/balanceOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:layout_toEndOf="@id/A"
                android:text="@string/text_balance"
                android:textAlignment="textEnd"
                android:textColor="#EEEEEE"
                android:textSize="17sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/two"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/one"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#424242"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:text="@string/Current_Investment"
                android:textColor="#EEEEEE"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/balanceTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:layout_toEndOf="@id/B"
                android:text="@string/text_balance"
                android:textAlignment="textEnd"
                android:textColor="#EEEEEE"
                android:textSize="17sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/three"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/two"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#424242"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:text="@string/Salary_this_month"
                android:textColor="#EEEEEE"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/balanceThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:layout_toEndOf="@id/C"
                android:text="@string/text_balance"
                android:textAlignment="textEnd"
                android:textColor="#EEEEEE"
                android:textSize="17sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/four"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/three"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#424242"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:text="@string/Fixed_deposits"
                android:textColor="#EEEEEE"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/balanceFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:layout_toEndOf="@id/D"
                android:text="@string/text_balance"
                android:textAlignment="textEnd"
                android:textColor="#EEEEEE"
                android:textSize="17sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Five"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/four"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#424242"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/E"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:text="@string/Emergency_funds"
                android:textColor="#EEEEEE"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/balanceFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:layout_toEndOf="@id/E"
                android:text="@string/text_balance"
                android:textAlignment="textEnd"
                android:textColor="#EEEEEE"
                android:textSize="17sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/iv_menu"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/Five"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button"
        android:text="@string/UPDATE_DELETE"
        android:textColor="#fff"
        android:textSize="13sp" />


</RelativeLayout>